<resources>
    <string name="app_name">Cheapy LC Meter</string>
    <string name="type">Type</string>
    <string name="fixed">Fixed</string>
    <string name="result">Result</string>
    <string name="inductor">Inductor\n(uH)</string>
    <string name="capacitor">Capacitor\n(nF)</string>
    <string name="measure">Measure</string>
    <string name="calibrate">Calibrate</string>
    <string name="msg">EXIT?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="zero">0</string>
    <string name="alert">
        //Please use this application with maximum audio volume//\n
        //Because maximum audio volume can improve bit resolution of recorded signal//\n\n
        //License//\n\n
        CheapyLCMeter\n
        Copyright (c) 2016, Sanghoon Cho\n
        All rights reserved.\n\n
        Redistribution and use in source and binary forms, with or without
        modification, are permitted provided that the following conditions are met:\n
        * Redistributions of source code must retain the above copyright
        notice, this list of conditions and the following disclaimer.\n
        * Redistributions in binary form must reproduce the above copyright
        notice, this list of conditions and the following disclaimer in the
        documentation and/or other materials provided with the distribution.\n
        * Neither the name of the [organization] nor the
        names of its contributors may be used to endorse or promote products
        derived from this software without specific prior written permission.\n\n
        THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
        ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
        WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
        DISCLAIMED. IN NO EVENT SHALL [COPYRIGHT HOLDE] BE LIABLE FOR ANY
        DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
        (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
        LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
        ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
        (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
        SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n</string>
</resources>

